<resources>
    <string name="app_name">foori</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="message_progress">0</string>

    <string name="passchange">Password Change</string>
    <string name="findidtitle">Find ID</string>
    <string name="pw">Find PW</string>
    <string name="findid">We will send your ID through your email.</string>
    <string name="findpw">We will send new PW through your email.</string>

    <string name="pwConfirm">PW confirm</string>
    <string name="name">Name</string>
    <string name="birth">birth</string>
    <string name="spicyRate">Spicy(1~5)</string>
    <string name="pick">Pick Date</string>
    <string name="allegry">Allergies</string>
    <string name="sign">Sign board</string>

    <string name="myreviews">My Reviews</string>
    <string name="Editpref">Edit Preference</string>
    <string name="ChangePw">Change Password</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="Kor">Korean Name</string>
    <string name="OrderFinished">Order Finished!</string>
    <string name="Enjoy">Enjoy your meal!!</string>

    <string name="date">Date</string>
    <string name="a1">To eat alone</string>
    <string name="a2">Bitter</string>
    <string name="a3">watery</string>
    <string name="a4">Buttery</string>
    <string name="a5">Tasteless</string>
    <string name="a6">Chewy</string>
    <string name="a7">Plain</string>
    <string name="a8">Crispy</string>
    <string name="a9">Dry</string>
    <string name="a10">With alcohol</string>
    <string name="a11">Fermented</string>
    <string name="a12">Savory</string>
    <string name="a13">fresh</string>
    <string name="a14">Fresh</string>
    <string name="a15">Fruity</string>
    <string name="a16">Garlic Flavot</string>
    <string name="a17">Hangover</string>
    <string name="a18">Healthy</string>
    <string name="a19">Meaty</string>
    <string name="a20">Midnight Snack</string>
    <string name="a21">Meek</string>
    <string name="a22">Moist</string>
    <string name="a23">Fat</string>
    <string name="a24">Cool</string>
    <string name="a25">Salty</string>
    <string name="a26">Snack</string>
    <string name="a27">Sour</string>
    <string name="a28">Spicy</string>
    <string name="a29">Sticky</string>
    <string name="a30">Full</string>
    <string name="a31">Sweety</string>
    <string name="a32">Watery</string>

    <string name="b1">Rice</string>
    <string name="b2">Kimbap/Sushi</string>
    <string name="b3">Porridge/Soup</string>
    <string name="b4">Noodles/Dumplings</string>
    <string name="b5">Rice cake</string>
    <string name="b6">Bread</string>
    <string name="b7">Burger</string>
    <string name="b8">Pizza</string>
    <string name="b9">Chicken</string>
    <string name="b10">Sandwich</string>
    <string name="b11">Snack</string>
    <string name="b12">Beverage</string>
    <string name="b13">Soup</string>
    <string name="b14">Cold soup</string>
    <string name="b15">Stew/Hot pot</string>
    <string name="b16">Steamed</string>
    <string name="b17">Grilled</string>
    <string name="b18">Stir-fried</string>
    <string name="b19">Boiled</string>
    <string name="b20">Fried</string>
    <string name="b21">Kimchi</string>
    <string name="b22">Salad</string>
    <string name="b23">Cooked herbs</string>
    <string name="b24">Seasoned herbs</string>
    <string name="b25">Raisins</string>
    <string name="b26">Korean pancake</string>
    <string name="b27">Korean Salted fish</string>
    <string name="b28">Sashimi</string>
    <string name="b29">Pickles</string>
    <string name="b30">Etc.</string>

    <string name="amount">Amount</string>
    <string name="change">Change Language</string>

    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="mypage">Mypage</string>
    <string name="review">Review</string>
    <string name="explain">Your Explaination</string>


    <string name="allergy1">Egg</string>
    <string name="allergy2">Milk</string>
    <string name="allergy3">BuckWheat</string>
    <string name="allergy4">Peanut</string>
    <string name="allergy5">Soybean</string>
    <string name="allergy6">Wheat</string>
    <string name="allergy7">Mackerel</string>
    <string name="allergy8">Crab</string>
    <string name="allergy9">Shrimp</string>
    <string name="allergy10">Pork</string>
    <string name="allergy11">Peach</string>
    <string name="allergy12">Tomato</string>
    <string name="allergy13">Nuts</string>
    <string name="allergy14">Chicken</string>
    <string name="allergy15">Beef</string>
    <string name="allergy16">Squid</string>
    <string name="allergy17">Selfish</string>
    <string name="allergy18">Nuts</string>

    <string name="idsend">해당 이메일 주소로 ID가 발송되었습니다. 로그인 화면으로 이동합니다.</string>
    <string name="noid">존재하지 않는 아이디입니다.</string>
    <string name="network">네트워크 연결을 확인해주세요.</string>
    <string name="notexist">존재하지 않는 아이디거나 이메일이 일치하지 않습니다.</string>
    <string name="confirmfail">비밀번호가 비밀번호 재입력과 일치하지 않습니다.</string>
    <string name="success">성공적으로 제출되었습니다.</string>
    <string name="joinsucess">회원가입 성공입니다. 가입하신 이메일로 인증 후에 로그인 가능합니다.</string>
    <string name="duplicate">아이디 혹은 이메일 중복입니다.</string>
    <string name="notexistid">"존재하지 않는 아이디입니다.</string>
    <string name="incorrectpw">계정이 비활성 상태이거나 비밀번호가 틀립니다.</string>
    <string name="wrong">잘못된 아이디나 비밀번호입니다.</string>
    <string name="incorrect">잘못된 정보입니다.</string>
    <string name="pwsend">해당 이메일로 임시 비밀번호가 전송되었습니다.</string>

    <string name="successchange">정상적으로 변경되었습니다.</string>
    <string name="modifysuccess">수정 성공!!</string>
    <string name="quit">계정이 삭제되었습니다. 메인으로 돌아갑니다..</string>
    <string name="error">오류가 발생하였습니다. 잠시 후 다시 시도해주세요</string>
    <string name="cancel">취소되었습니다.</string>
    <string name="autho">카메라 및 갤러리 접근 권한 확인</string>


    <string name="eatAlone">eat alone</string>
    <string name="bitter">bitter</string>
    <string name="watery">watery</string>
    <string name="buttery">buttery</string>
    <string name="tasteless">tasteless</string>
    <string name="chewy">chewy</string>
    <string name="plain">plain</string>
    <string name="crispy">crispy</string>
    <string name="dry">dry</string>
    <string name="alcohol">with alcohol</string>
    <string name="fermented">fermented</string>
    <string name="savory">savory</string>
    <string name="fresh">fresh</string>
    <string name="Fresh">Fresh</string>
    <string name="fruity">fruity</string>
    <string name="garlic">garlic flavor</string>
    <string name="hangover">hangover</string>
    <string name="healthy">healthy</string>
    <string name="meaty">meaty</string>
    <string name="midnight">midnight snack</string>
    <string name="meek">meek</string>
    <string name="moist">moist</string>
    <string name="fat">fat</string>
    <string name="cool">cool</string>
    <string name="salty">salty</string>
    <string name="snack">snack</string>
    <string name="sour">sour</string>
    <string name="spicy">spicy</string>
    <string name="sticky">sticky</string>
    <string name="full">full</string>
    <string name="sweety">sweety</string>

    <string name="rice">rice</string>
    <string name="sushi">sushi</string>
    <string name="porridge">porridge</string>
    <string name="noodles">noodles</string>
    <string name="riceCake">rice cake</string>
    <string name="bread">bread</string>
    <string name="burger">burger</string>
    <string name="pizza">pizza</string>
    <string name="chicken">chicken</string>
    <string name="sandwich">sandwich</string>
    <string name="beverage">beverage</string>
    <string name="soup">soup</string>
    <string name="coldSoup">cold soup</string>
    <string name="stew">stew</string>
    <string name="steamed">steamed</string>
    <string name="grilled">grilled</string>
    <string name="stir">stir-fried</string>
    <string name="boiled">boiled</string>
    <string name="fried">fried</string>
    <string name="Kimchi">Kimchi</string>
    <string name="salad">salad</string>
    <string name="cookedHerb">cooked herbs</string>
    <string name="seasonedHerb">seasoned herbs</string>
    <string name="raisins">raisins</string>
    <string name="Kpancake">Korean pancake</string>
    <string name="Kfish">Korean salted fish</string>
    <string name="sashimi">sashimi</string>
    <string name="pickles">pickles</string>
    <string name="etc">Etc.</string>

    <string name="goToHome">Go To Home</string>
    <string name="tagplz">Review makes better recommendations.</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="findpwtitle">Find PW</string>
    <string name="today">Today\'s special</string>
    <string name="country">Country</string>
    <string name="checkPreference">Check Your Preference.</string>
    <string name="checkAllergy">Check Allergy</string>
    <string name="canReview">You can now write a review of the food you ordered.</string>
    <string name="delete">Delete</string>
    <string name="addToCart">Add To Cart</string>
    <string name="lost">Lost</string>
    <string name="skip">Skip</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>

</resources>